--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,5 +1,3 @@
-/* src/styles/HomePage.css */
-
 /* General page styling */
 .home-page {
   display: flex;
@@ -46,6 +44,7 @@
   font-family: 'Arial', sans-serif;
   transition: background-color 0.3s ease, transform 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Darker shadow for depth */
+  cursor: pointer;
 }
 
 .home-link:hover {
